--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,60 @@
+appnope==0.1.3
+asttokens==2.0.5
+backcall==0.2.0
 beautifulsoup4==4.11.1
 cbor==1.0.0
 certifi==2021.10.8
 charset-normalizer==2.0.12
+debugpy==1.6.0
+decorator==5.1.1
 elasticsearch==7.9.1
+entrypoints==0.4
+executing==0.8.3
 idna==3.3
 ijson==3.1.4
+ipykernel==6.13.0
+ipython==8.3.0
 ir-datasets==0.5.1
+jedi==0.18.1
+joblib==1.1.0
+jupyter-client==7.3.1
+jupyter-core==4.10.0
 lxml==4.8.0
 lz4==4.0.0
+matplotlib-inline==0.1.3
+nest-asyncio==1.5.5
 numpy==1.22.3
+packaging==21.3
+pandas==1.4.2
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+prompt-toolkit==3.0.29
+psutil==5.9.0
+ptyprocess==0.7.0
+pure-eval==0.2.2
 pyautocorpus==0.1.8
+Pygments==2.12.0
+pyparsing==3.0.9
+python-dateutil==2.8.2
+pytz==2022.1
 PyYAML==6.0
+pyzmq==22.3.0
+rank-bm25==0.2.2
 requests==2.27.1
+scikit-learn==1.1.1
+scipy==1.8.1
+six==1.16.0
 soupsieve==2.3.2.post1
+stack-data==0.2.0
+threadpoolctl==3.1.0
+tornado==6.1
 tqdm==4.64.0
+traitlets==5.2.1.post0
 trec-car-tools==2.6
 unlzw3==0.2.1
 urllib3==1.26.9
 warc3-wet==0.2.3
 warc3-wet-clueweb09==0.2.5
+wcwidth==0.2.5
 zlib-state==0.1.5
